syntax = "proto2";

package Zko;

message ZkShaderProgram {
  required string refId = 500;

  map<string, ZkShaderAttribute> attributes = 3;
  map<string, ZkShaderUniform> uniforms = 4;
}

message ZkShaderAttribute {
  required uint32 id = 1;
  required string attributeName = 2;
}

message ZkShaderUniform {
  required string uniformName = 1;
  required uint32 count = 2;
  required ZkDataType dataType = 3;
  required uint32 idx = 4;
}

